syntax = "proto3";

package org.example.grpc;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option java_package = "org.example.grpc";

service PersonService {
  rpc findPersonById(PersonByIdRequest) returns (Person) {
  }
  rpc findPeopleByPersonIdIn(PeopleByPersonIdInRequest) returns (PeopleByPersonIdInResponse) {
  }
}

message PersonByIdRequest {
  int64 personId = 1;
}

message Person {
  int64 personId = 1;
  string firstName = 2;
  string lastName = 3;
  string patronymic = 4;
  google.protobuf.Timestamp registrationDate = 5;
  int32 maxExplorers = 6;
  string email = 7;
  string phoneNumber = 8;
  string skype = 9;
  string telegram = 10;
  bool isVisiblePrivateData = 11;
}

message PeopleByPersonIdInRequest {
  repeated int64 personIds = 1;
}

message PeopleByPersonIdInResponse {
  map<int64, Person> peopleByPersonIdMap = 1;
}

message PersonWithRating {
  int64 personId = 1;
  string firstName = 2;
  string lastName = 3;
  string patronymic = 4;
  double rating = 5;
}
